# Datacode-sdk

./: Cargo.toml  README.md
docs/: ABI.md  examples.md  modules.md
examples/: hello_world.dc  hello_world_minimal.dc  libhello_module.dylib  math_module.dc  telegram_bot.dc
examples/hello_module/: Cargo.toml
examples/hello_module/src/: lib.rs
include/: datacode.h
src/: abi.rs  context.rs  lib.rs  macros.rs  types.rs
tools/: build_abi.sh  gen_bindings.rs
