[package]
name = "datacode_sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for writing DataCode native modules and plugins via ABI"
license = "MIT"
authors = ["Igor <igornet0@users.noreply.github.com>"]
repository = "https://github.com/igornet0/DataCode"

[lib]
name = "datacode_sdk"
path = "src/lib.rs"

[dependencies]
datacode_abi = { path = "../datacode_abi" }
libc = "0.2"
paste = "1.0"
